src/test/deca/codegen/valid/sansObjet/printlnvide.deca
/*
  Description:
    Tester un println vide

    Historique:
      cree le 16/01/2020
    Sortie attendu:
    ok

    ok
*/
{
	println("ok");
	println();
	println("ok");
}
