src/test/deca/codegen/invalid/println1.deca
/* Description:
    Tester un print d'une variable non initialisée

    Historique:
      cree le 16/01/2020
    Sortie attendu:


*/
{
	int x;
  println(x);
}
